# subdivMesh

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  subtri.C  subtri.h  tester.C
src/houdini/: SOP_SubtriBasic.C  SOP_SubtriBasic.h
src/subTri/: subtri.C  subtri.h
